fix panel collapse
panels inside fs-controller now collapse properly

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -15,6 +15,9 @@ body {
     padding-left: 10px;
     padding-right: 20px;
     cursor: pointer;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 1.75rem;
 }
 
 .panel h1::before {
@@ -26,7 +29,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding: 0 16px;
 }
 
@@ -45,7 +47,14 @@ body {
 }
 
 .fs-controller .panel {
-    flex: 1;
+    flex: 1 1 auto;
+    background-color: #000;
+}
+
+.fs-controller .panel .content {
+    padding-top: 10px;
+    background-color: #303030;
+    height: calc(100% - 1.75rem);
 }
 
 #login {
